# cpp-implementations

./: .gitignore  README.md
base10/: README.md  base10.h
base16/: README.md  base16.h
base2/: README.md  base2.h
base32/: README.md  base32.cpp  base32.h
base36/: README.md  base36.h
base58/: README.md  base58.h
base62/: README.md  base62.h
base64/: README.md  base64.h
base8/: README.md  base8.h
base85/: README.md  base85.h
tests/: CMakeLists.txt  README.md  test_base10.cpp  test_base16.cpp  test_base2.cpp  test_base32.cpp  test_base36.cpp  test_base58.cpp  test_base62.cpp  test_base64.cpp  test_base8.cpp  test_base85.cpp
